--- a/prj/Calculator.vcxproj.filters
+++ b/prj/Calculator.vcxproj.filters
@@ -19,6 +19,12 @@
     <Filter Include="resource\res">
       <UniqueIdentifier>{43fb2143-2234-4ee2-871e-40ceb996dbce}</UniqueIdentifier>
     </Filter>
+    <Filter Include="include\Element">
+      <UniqueIdentifier>{19f59de5-5d58-4699-bdf0-316b7906468b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="source\Element">
+      <UniqueIdentifier>{324745f4-9f18-49dc-9f1c-42a9ec181fce}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\source\Dialog\CalculatorDlg.h">
@@ -39,6 +45,15 @@
     <ClInclude Include="..\resource\resource.h">
       <Filter>resource</Filter>
     </ClInclude>
+    <ClInclude Include="..\source\Constants.hpp">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\Element\OutputScreen.h">
+      <Filter>include\Element</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\Element\InputFields.h">
+      <Filter>include\Element</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\source\Dialog\CalculatorDlg.cpp">
@@ -49,6 +64,12 @@
     </ClCompile>
     <ClCompile Include="..\source\pch.cpp">
       <Filter>source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\Element\OutputScreen.cpp">
+      <Filter>source\Element</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\Element\InputFields.cpp">
+      <Filter>source\Element</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
