--- a/prj/Calculator.vcxproj.filters
+++ b/prj/Calculator.vcxproj.filters
@@ -19,11 +19,11 @@
     <Filter Include="resource\res">
       <UniqueIdentifier>{43fb2143-2234-4ee2-871e-40ceb996dbce}</UniqueIdentifier>
     </Filter>
-    <Filter Include="include\Element">
-      <UniqueIdentifier>{19f59de5-5d58-4699-bdf0-316b7906468b}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="source\Element">
+    <Filter Include="source\Core">
       <UniqueIdentifier>{324745f4-9f18-49dc-9f1c-42a9ec181fce}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="include\Core">
+      <UniqueIdentifier>{19f59de5-5d58-4699-bdf0-316b7906468b}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -48,11 +48,11 @@
     <ClInclude Include="..\source\Constants.hpp">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="..\source\Element\OutputScreen.h">
-      <Filter>include\Element</Filter>
+    <ClInclude Include="..\source\Core\Processor.h">
+      <Filter>include\Core</Filter>
     </ClInclude>
-    <ClInclude Include="..\source\Element\InputFields.h">
-      <Filter>include\Element</Filter>
+    <ClInclude Include="..\source\Core\Inputs.h">
+      <Filter>include\Core</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -65,11 +65,11 @@
     <ClCompile Include="..\source\pch.cpp">
       <Filter>source</Filter>
     </ClCompile>
-    <ClCompile Include="..\source\Element\OutputScreen.cpp">
-      <Filter>source\Element</Filter>
+    <ClCompile Include="..\source\Core\Processor.cpp">
+      <Filter>source\Core</Filter>
     </ClCompile>
-    <ClCompile Include="..\source\Element\InputFields.cpp">
-      <Filter>source\Element</Filter>
+    <ClCompile Include="..\source\Core\Inputs.cpp">
+      <Filter>source\Core</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
