--- a/prj/Calculator.vcxproj.filters
+++ b/prj/Calculator.vcxproj.filters
@@ -25,6 +25,12 @@
     <Filter Include="include\Core">
       <UniqueIdentifier>{19f59de5-5d58-4699-bdf0-316b7906468b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="include\Element">
+      <UniqueIdentifier>{3fbccac3-85dd-48e7-9075-a28726dd5668}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="source\Element">
+      <UniqueIdentifier>{03fbcb63-6470-4570-8b8e-6cf1c8002aef}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\source\Dialog\CalculatorDlg.h">
@@ -57,6 +63,9 @@
     <ClInclude Include="..\source\Dialog\VariableRegisterForm.h">
       <Filter>include\Dialog</Filter>
     </ClInclude>
+    <ClInclude Include="..\source\Element\History.h">
+      <Filter>include\Element</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\source\Dialog\CalculatorDlg.cpp">
@@ -76,6 +85,9 @@
     </ClCompile>
     <ClCompile Include="..\source\Dialog\VariableRegisterForm.cpp">
       <Filter>source\Dialog</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\Element\History.cpp">
+      <Filter>source\Element</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
